# ai-software-engineer

./: .gitignore  PROMPT.md  README.md  main.py  pyproject.toml
docs/superpowers/plans/: 2026-06-27-ai-software-engineer.md
output/: analyzer.py  celsius_to_fahrenheit.py  formatter.py  is_prime.py  main.py
output/home/user/: weather.py
output/run/: utmp
output/run/e2b/certs/: ca-certificates.crt
output/run/rpc_pipefs/gssd/clntXX/: info
output/run/systemd/dynamic-uid/: 64847
output/run/systemd/generator/: rpc_pipefs.target  run-rpc_pipefs.mount
output/run/systemd/journal/streams/: 8:1754  8:414  8:418  8:717
output/run/systemd/netif/links/: 1  2
output/tmp/: reader.py
src/: config.py  coordinator.py  display.py  gates.py  models.py  pipeline.py  prompts.py  sandbox.py
tests/: test_gates.py  test_imports.py  test_integration.py  test_models.py  test_pipeline.py
