[project]
name = "ai-software-engineer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.12",
    "e2b>=2.30.0",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-e2b>=0.0.4",
    "langchain-openrouter>=0.2.4",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
